--- a/notebooks/Vendas.ipynb
+++ b/notebooks/Vendas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "id": "d08a0443-2e01-4d13-8808-a3bffb800bee",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "id": "797cb8a9-b75e-4d3e-ad78-01537ed0a553",
    "metadata": {},
    "outputs": [],
@@ -22,17 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "id": "b8c5a09a-c988-48fe-802b-82089135aac4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#salva os dados da planilha na variável df\n",
     "df = pd.read_excel(arquivo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "id": "1871b762-dce7-4cdf-b890-3506ded84a4e",
    "metadata": {},
    "outputs": [
@@ -131,28 +132,30 @@
        "4         6400  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#exibe os 5 primeiros registros da planilha\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "id": "1a77cf5f-6faf-42c1-8755-8030a06e083e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transforma os dados da planilha em um dicionário\n",
     "vendas = df.to_dict(orient=\"records\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "82377fbc-c594-438f-9515-6932a54a6d74",
    "metadata": {},
    "outputs": [],
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "b3172d12-0419-40a3-a36d-be001d4d7c06",
    "metadata": {},
    "outputs": [],
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "3d7b5fb1-71c2-4ae2-b017-6a9d23414b5d",
    "metadata": {},
    "outputs": [],
@@ -221,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "81e54789-0504-4e7f-ac95-0b715b2bdaa4",
    "metadata": {},
    "outputs": [
@@ -236,7 +239,7 @@
        " 'Beatriz Souza']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "id": "ca4f4e72-2772-4233-899f-8b1b93fe92f6",
    "metadata": {},
    "outputs": [
@@ -259,7 +262,7 @@
        " 'Valortotal': 3200}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
