--- a/notebooks/Vendas.ipynb
+++ b/notebooks/Vendas.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "ca4f4e72-2772-4233-899f-8b1b93fe92f6",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "totalVendedor(\"Raissa Souza\", vendas)"
+    "totalVendedor(\"Fernanda Costa\", vendas)"
    ]
   }
  ],
