--- a/notebooks/Vendas.ipynb
+++ b/notebooks/Vendas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "id": "d08a0443-2e01-4d13-8808-a3bffb800bee",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "id": "797cb8a9-b75e-4d3e-ad78-01537ed0a553",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "id": "b8c5a09a-c988-48fe-802b-82089135aac4",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "1871b762-dce7-4cdf-b890-3506ded84a4e",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "4         6400  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "id": "1a77cf5f-6faf-42c1-8755-8030a06e083e",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "id": "82377fbc-c594-438f-9515-6932a54a6d74",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "id": "b3172d12-0419-40a3-a36d-be001d4d7c06",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "id": "3d7b5fb1-71c2-4ae2-b017-6a9d23414b5d",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "id": "81e54789-0504-4e7f-ac95-0b715b2bdaa4",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        " 'Beatriz Souza']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,19 +250,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "ca4f4e72-2772-4233-899f-8b1b93fe92f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'produtos': [{'nome': 'Notebook', 'qtd': 1}],\n",
-       " 'qtdTotal': 1,\n",
-       " 'Valortotal': 3200}"
+       "{'produtos': [{'nome': 'Notebook', 'qtd': 1548},\n",
+       "  {'nome': 'Impressora', 'qtd': 1489},\n",
+       "  {'nome': 'Webcam', 'qtd': 1487},\n",
+       "  {'nome': 'Mouse', 'qtd': 1485},\n",
+       "  {'nome': 'Teclado', 'qtd': 1644},\n",
+       "  {'nome': 'Cadeira Gamer', 'qtd': 1690},\n",
+       "  {'nome': 'Monitor', 'qtd': 1384}],\n",
+       " 'qtdTotal': 10727,\n",
+       " 'Valortotal': 9613860}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
