--- a/notebooks/Vendas.ipynb
+++ b/notebooks/Vendas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "d08a0443-2e01-4d13-8808-a3bffb800bee",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "797cb8a9-b75e-4d3e-ad78-01537ed0a553",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "b8c5a09a-c988-48fe-802b-82089135aac4",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "1871b762-dce7-4cdf-b890-3506ded84a4e",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "4         6400  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "1a77cf5f-6faf-42c1-8755-8030a06e083e",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "id": "82377fbc-c594-438f-9515-6932a54a6d74",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "b3172d12-0419-40a3-a36d-be001d4d7c06",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "3d7b5fb1-71c2-4ae2-b017-6a9d23414b5d",
    "metadata": {},
    "outputs": [],
@@ -204,10 +204,13 @@
     "        \n",
     "        if venda[\"Vendedor\"] == vendedor:      \n",
     "            \n",
-    "            listaProdutos = lista[\"produtos\"]\n",
-    "            \n",
+    "            # Salva a lista de produtos que já existe na variável listaProdutos\n",
+    "            listaProdutos = lista[\"produtos\"] \n",
+    "\n",
+    "            # Se o nome do produto for igual a um dos nomes dos produtos que estão em listaProdutos            \n",
     "            if any(item['nome'] == venda['Produto'] for item in listaProdutos):\n",
     "\n",
+    "                # retorna a posição que o produto está em listaProdutos\n",
     "                indiceProduto = retornaIndice(listaProdutos, venda['Produto'])\n",
     "                    \n",
     "                lista[\"produtos\"][indiceProduto][\"qtd\"] += venda[\"Quantidade\"] \n",
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "81e54789-0504-4e7f-ac95-0b715b2bdaa4",
    "metadata": {},
    "outputs": [
@@ -239,7 +242,7 @@
        " 'Beatriz Souza']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "ca4f4e72-2772-4233-899f-8b1b93fe92f6",
    "metadata": {},
    "outputs": [
@@ -268,7 +271,7 @@
        " 'Valortotal': 9613860}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
